--- a/BabyNoggin/sass/style.scss
+++ b/BabyNoggin/sass/style.scss
@@ -635,7 +635,7 @@ div.inside, div.outside {
 
 // our status styles
 
-.wrapper-our-status .icon-status {
+.our-status-wrapper .icon-status {
     height: 40vw;
     background-repeat: no-repeat;
     background-size: 35%;
@@ -643,65 +643,68 @@ div.inside, div.outside {
     background-position-y: bottom;
   }
 
-.status-great .icon-status {
+#status-great .icon-status {
   background-image: url(../img/great-daisy.png);
 }
 
-.status-seek .icon-status {
+#status-seek .icon-status {
   background-image: url(../img/seek-daisy.png);
 }
 
-.status-test .icon-status {
+#status-test .icon-status {
   background-image: url(../img/tests-daisy.png);
 }
 
-.status-great .description {
+#status-great .description {
   padding: 5vw 6vw;
+  margin-bottom: 5vw;
 }
 
-.status-test .description, .status-seek .description {
+#status-test .description,
+#status-seek .description {
   padding: 5vw 8vw;
+  margin-bottom: 10vw;
 }
 
-.wrapper-our-status .description h2 {
+.our-status-wrapper .description h2 {
   font-size: 1rem;
   text-align: center;
   color: $status-header-color;
   margin-bottom: 4vw;
 }
 
-.wrapper-our-status .description p {
+.our-status-wrapper .description p {
   text-align: center;
   color: $text-color;
 
 }
 
-.status-great .description p ,
-.status-test .description p {
+#status-great .description p ,
+#status-test .description p {
   margin-bottom: 12vw;
 }
 
-.status-seek .description p {
+#status-seek .description p {
   margin-bottom: 4vw;
 }
 
-.wrapper-our-status .description span {
+.our-status-wrapper .description span {
   font-weight: bold;
 }
 
-.wrapper-our-status .description a {
+.our-status-wrapper .description a {
   color: $link-color;
 }
 
-.status-great .wrapper-link,
-.status-test .wrapper-link {
+#status-great .wrapper-link,
+#status-test .wrapper-link {
   position: relative;
   min-height: 10vw;
   margin-bottom: 10vw;
 }
 
-.status-great .wrapper-link a,
-.status-test .wrapper-link a {
+#status-great .wrapper-link a,
+#status-test .wrapper-link a {
   position: absolute;
   color: $link-color;
   text-align: center;
