--- a/BabyNoggin/css/style.css
+++ b/BabyNoggin/css/style.css
@@ -622,34 +622,77 @@ div.inside, div.outside {
   color: #f0712c;
   font-size: 1rem; }
 
-.tracker .content {
+.tracker-wrapper .content {
   padding: 5vw 0; }
 
-.tracker .list-menu {
+.tracker-wrapper .list-menu {
   padding: 0 5vw; }
 
-.tracker .list-menu ul {
+.tracker-wrapper .list-menu ul {
   border: 1px solid #a7a9ac;
   border-radius: 5px;
-  overflow: hidden; }
+  overflow: hidden;
+  margin: 6vw 0; }
 
-.tracker .list-menu li {
+.tracker-wrapper .list-menu li {
   float: left;
   padding: 0.5vw 4.2vw;
   border-right: 1px solid #a7a9ac; }
 
-.tracker .list-menu li:last-child {
+.tracker-wrapper .list-menu li:last-child {
   border: none; }
 
-.tracker .list-menu .active-link {
+.tracker-wrapper .list-menu .active-link {
   background-color: #39b9de; }
 
-.tracker .list-menu a {
+.tracker-wrapper .list-menu a {
   font-size: 0.85rem;
   color: #f0712c; }
 
-.tracker .list-menu .active-link a {
+.tracker-wrapper .list-menu .active-link a {
   color: #ffffff; }
+
+.tracker-wrapper .wrapper-menu-form {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 8vw;
+  padding: 0 5vw; }
+
+.tracker-wrapper .wrapper-menu-form a {
+  color: #f0712c; }
+
+.tracker-wrapper .button {
+  border: none;
+  background-color: #ffffff;
+  color: #f0712c;
+  padding: 0; }
+
+.tracker-wrapper h2 {
+  font-size: 1.2rem;
+  text-align: center;
+  color: #159fc0;
+  margin-bottom: 4vw; }
+
+.tracker-wrapper .wrapper-select {
+  min-height: 60vw;
+  margin-bottom: 5vw;
+  position: relative; }
+
+.tracker-wrapper .lines {
+  border-top: solid 1px #cccccc;
+  border-bottom: solid 1px #cccccc;
+  position: absolute;
+  top: 23vw;
+  left: 0;
+  width: 100%;
+  height: 2rem; }
+
+.tracker-wrapper .choose-time {
+  position: relative;
+  min-height: 60vw;
+  margin-bottom: 5vw;
+  display: flex;
+  justify-content: center; }
 
 .wrapper-tracker-2 .change-date {
   display: flex;
@@ -722,48 +765,6 @@ div.inside, div.outside {
 
 .wrapper-tracker-2 .list-notes span:last-child {
   font-size: 0.8rem; }
-
-.tracker .wrapper-menu-form {
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 8vw;
-  padding: 0 5vw; }
-
-.tracker .wrapper-menu-form a {
-  color: #f0712c; }
-
-.tracker .button {
-  border: none;
-  background-color: #ffffff;
-  color: #f0712c;
-  padding: 0; }
-
-.tracker h2 {
-  font-size: 1.2rem;
-  text-align: center;
-  color: #159fc0;
-  margin-bottom: 4vw; }
-
-.tracker .wrapper-select {
-  min-height: 60vw;
-  margin-bottom: 5vw;
-  position: relative; }
-
-.tracker .lines {
-  border-top: solid 1px #cccccc;
-  border-bottom: solid 1px #cccccc;
-  position: absolute;
-  top: 23vw;
-  left: 0;
-  width: 100%;
-  height: 2rem; }
-
-.tracker .choose-time {
-  position: relative;
-  min-height: 60vw;
-  margin-bottom: 5vw;
-  display: flex;
-  justify-content: center; }
 
 #drum_method {
   width: 100%;
@@ -891,7 +892,7 @@ div.inside, div.outside {
     height: 1.3rem; }
 
   .calendar-wrapper .lines,
-  .tracker .lines {
+  .tracker-wrapper .lines {
     top: 23.5vw; }
 
   #profile-progress .milestone-list a,
@@ -903,11 +904,11 @@ div.inside, div.outside {
     padding-left: 2.2vw;
     line-height: 3.5rem; }
 
-  .tracker .list-menu li {
+  .tracker-wrapper .list-menu li {
     padding: 0.5vw 5.2vw; }
 
   .calendar-wrapper .lines,
-  .tracker .lines {
+  .tracker-wrapper .lines {
     top: 20.5vw; } }
 @media (min-width: 490px) and (orientation: landscape) {
   html {
@@ -923,7 +924,7 @@ div.inside, div.outside {
     line-height: 3.5rem; }
 
   .calendar-wrapper .lines,
-  .tracker .lines {
+  .tracker-wrapper .lines {
     top: 20vw; }
 
   #profile-progress li {
@@ -941,7 +942,7 @@ div.inside, div.outside {
     top: 3.6vw;
     font-size: 1.1rem; }
 
-  .tracker .list-menu li {
+  .tracker-wrapper .list-menu li {
     padding: 0.5vw 5.2vw; } }
 @media (min-width: 600px) and (max-width: 729px) {
   html {
@@ -967,7 +968,7 @@ div.inside, div.outside {
     top: 3.5vw;
     font-size: 1.1rem; }
 
-  .tracker .list-menu li {
+  .tracker-wrapper .list-menu li {
     padding: 0.5vw 5.2vw; } }
 @media (min-width: 730px) {
   html {
@@ -990,7 +991,7 @@ div.inside, div.outside {
     height: 0.5rem; }
 
   .calendar-wrapper .lines,
-  .tracker .lines {
+  .tracker-wrapper .lines {
     top: 20vw; }
 
   #profile-page .wrapper-tick-icon {
@@ -1015,14 +1016,14 @@ div.inside, div.outside {
   #baby-tracker .list-tracking a {
     top: 3.6vw; }
 
-  .tracker .list-menu li {
+  .tracker-wrapper .list-menu li {
     padding: 0.5vw 5.1vw; }
 
-  .tracker .list-menu ul {
+  .tracker-wrapper .list-menu ul {
     border-radius: 8px; } }
 @media (min-width: 730px) and (max-width: 899px) and (orientation: landscape) {
   .calendar-wrapper .lines,
-  .tracker .lines {
+  .tracker-wrapper .lines {
     top: 21vw; } }
 @media (min-width: 900px) {
   .header .headering {
@@ -1045,7 +1046,7 @@ div.inside, div.outside {
     width: 7rem; }
 
   .calendar-wrapper .lines,
-  .tracker .lines {
+  .tracker-wrapper .lines {
     top: 15vw; }
 
   #profile-page .tick {
@@ -1066,7 +1067,7 @@ div.inside, div.outside {
     background-position-x: 15vw;
     background-size: 4.5%; }
 
-  .tracker .list-menu li {
+  .tracker-wrapper .list-menu li {
     padding: 0.5vw 6.7vw; } }
 
 /*# sourceMappingURL=style.css.map */
