--- a/BabyNoggin/css/style.css
+++ b/BabyNoggin/css/style.css
@@ -15,7 +15,7 @@ html {
 .page-wrapper {
   background-image: url(../img/background.png); }
 
-.page-wrapper .clear-fix:after {
+.page-wrapper .clearfix:after {
   content: "";
   display: table;
   clear: both; }
@@ -636,7 +636,7 @@ div.inside, div.outside {
 
 .tracker-wrapper .list-menu li {
   float: left;
-  padding: 0.5vw 4.2vw;
+  padding: 0.1vw 4.2vw 1vw;
   border-right: 1px solid #a7a9ac; }
 
 .tracker-wrapper .list-menu li:last-child {
